--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "jwt-decode": "^3.1.2",
     "phaser": "^3.60.0"
   },
   "devDependencies": {
