--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack --config webpack.prod.js",
     "dev": "webpack serve --config webpack.common.js",
     "dev-fb": "webpack serve --config webpack.fb.js",
-    "start:socket": "ts-node server.ts"
+    "start:socket": "ts-node src/server/server.ts"
   },
   "author": "",
   "license": "ISC",
