--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "build": "webpack --config webpack.prod.js",
     "dev": "webpack serve --config webpack.common.js",
     "dev-fb": "webpack serve --config webpack.fb.js",
-    "start:socket": "ts-node src/server/server.ts"
+    "start:socket": "ts-node src/server/server.ts",
+    "start": "npm run build && npm run start:socket"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
     "phaser": "^3.60.0",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2"
