--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,12 @@ version: '3'
 services:
   bomberman-app:
     build: .
+    image: carloscyucra/bomberman-app:1.0
     ports:
       - '3000:3000'
     volumes:
       - ./:/app
       - /app/node_modules
+    
+    environment:
+      - IP_PROD=${IP_PROD}
