--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -26,6 +26,10 @@ jobs:
       - name: Get the latest commit SHA
         run: echo ${{github.sha}}
 
+      - name: Get the latest commit SHA 2
+        id: get-sha
+        run: echo "::set-output name=sha::$(git rev-parse HEAD)"
+
       - name: Tag the Docker Image
         run: docker tag kentyucraq/bomberman-app:1.0 kentyucraq/bomberman-app:${{ github.sha }}
 
