--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -31,6 +31,8 @@ jobs:
           echo "DOCKER_ACCESS_TOKEN=${{ secrets.DOCKER_HUB_ACCESS_TOKEN_CARLOS }}" >> "GITHUB_ENV"
           echo "DOCKER_COMPOSE_FILE=docker-compose-carlos.yml" >> "GITHUB_ENV"
         fi
+    - name: Check CREDENTIALS
+      run: echo "$DOCKER_USERNAME, $DOCKER_ACCESS_TOKEN, $DOCKER_COMPOSE_FILE"
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v1
