--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -37,8 +37,8 @@ jobs:
     - name: Log in to Docker Hub
       uses: docker/login-action@v1
       with:
-        username: $DOCKER_USERNAME
-        password: $DOCKER_ACCESS_TOKEN
+        username: carloscyucra
+        password: draconis_504
 
     - name: Build the Docker Image
       run: docker-compose -f $DOCKER_COMPOSE_FILE build
