--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -22,13 +22,13 @@ jobs:
       env:
         ACCOUNT: ${{ steps.set-docker-account.outputs.account }}
       run: |
-        if [ ACCOUNT = "kentyucra" ]; then
+        if [ $ACCOUNT = "kentyucra" ]; then
           echo "DOCKER_USERNAME=${{ secrets.DOCKER_HUB_USERNAME_KENT }}" >> "$GITHUB_ENV"
           echo "DOCKER_ACCESS_TOKEN=${{ secrets.DOCKER_HUB_ACCESS_TOKEN_KENT }}" >> "$GITHUB_ENV"
           echo "DOCKER_COMPOSE_FILE=docker-compose-kent.yml" >> "$GITHUB_ENV"
         else
-          echo "DOCKER_USERNAME=carloscyucra" >> "$GITHUB_ENV"
-          echo "DOCKER_ACCESS_TOKEN=draconis_504" >> "$GITHUB_ENV"
+          echo "DOCKER_USERNAME=${{ secrets.DOCKER_HUB_USERNAME_CARLOS }}" >> "$GITHUB_ENV"
+          echo "DOCKER_ACCESS_TOKEN=${{ secrets.DOCKER_HUB_ACCESS_TOKEN_CARLOS }}" >> "$GITHUB_ENV"
           echo "DOCKER_COMPOSE_FILE=docker-compose-carlos.yml" >> "$GITHUB_ENV"
         fi
     - name: Check CREDENTIALS
@@ -37,8 +37,8 @@ jobs:
     - name: Log in to Docker Hub
       uses: docker/login-action@v1
       with:
-        username: carloscyucra
-        password: draconis_5045
+        username: $DOCKER_USERNAME
+        password: $DOCKER_ACCESS_TOKEN
 
     - name: Build the Docker Image
       run: docker-compose -f $DOCKER_COMPOSE_FILE build
