--- a/.github/workflows/docker-ship.yml
+++ b/.github/workflows/docker-ship.yml
@@ -2,19 +2,14 @@ name: Deploy to DigitalOcean Droplet
 
 on:
   workflow_dispatch:
-  pull_request:
-    branches: ["master"]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Set Environment Variable for Docker Compose
-        run: echo "MY_VARIABLE=${{ env.PRODUCTION_HOST }}" >> $GITHUB_ENV
-
       - name: production host is
-        run: echo ${{ env.PRODUCTION_HOST }}
+        run: echo ${{ vars.PRODUCTION_HOST }}
 
       - name: Set up SSH
         uses: webfactory/ssh-agent@v0.5.2
@@ -23,6 +18,6 @@ jobs:
 
       - name: SSH and Deploy to Droplet
         run: |
-          ssh -o "StrictHostKeyChecking=no" root@${{ env.PRODUCTION_HOST }} "docker pull kentyucraq/bomberman-app:${{ github.event.pull_request.head.sha }}"
-          ssh -o "StrictHostKeyChecking=no" root@${{ env.PRODUCTION_HOST }} "docker stop bomberman-app-kent-test"
-          ssh -o "StrictHostKeyChecking=no" root@${{ env.PRODUCTION_HOST }} "docker run -d --rm --name bomberman-app-kent-test -p 3001:3001 $DOCKER_USERNAME/bomberman-app:1.0 kentyucraq/bomberman-app:${{ github.event.pull_request.head.sha }}"
+          ssh -o "StrictHostKeyChecking=no" root@${{ vars.PRODUCTION_HOST }} "docker pull kentyucraq/bomberman-app:${{ github.event.pull_request.head.sha }}"
+          ssh -o "StrictHostKeyChecking=no" root@${{ vars.PRODUCTION_HOST }} "docker stop bomberman-app-kent-test"
+          ssh -o "StrictHostKeyChecking=no" root@${{ vars.PRODUCTION_HOST }} "docker run -d --rm --name bomberman-app-kent-test -p 3001:3001 $DOCKER_USERNAME/bomberman-app:1.0 kentyucraq/bomberman-app:${{ github.event.pull_request.head.sha }}"
