--- a/.github/workflows/docker-ship.yml
+++ b/.github/workflows/docker-ship.yml
@@ -21,4 +21,4 @@ jobs:
         run: |
           ssh -o "StrictHostKeyChecking=no" root@${{ vars.PRODUCTION_HOST }} "docker pull kentyucraq/bomberman-app:${{ github.event.pull_request.head.sha }}"
           ssh -o "StrictHostKeyChecking=no" root@${{ vars.PRODUCTION_HOST }} "(docker ps -q -f name=bomberman-app-kent-test && docker stop bomberman-app-kent-test || echo 'No running container to stop')"
-          ssh -o "StrictHostKeyChecking=no" root@${{ vars.PRODUCTION_HOST }} "docker run -d --rm --name bomberman-app-kent-test -p 3001:3001 $DOCKER_USERNAME/bomberman-app:1.0 kentyucraq/bomberman-app:${{ github.event.pull_request.head.sha }}"
+          ssh -o "StrictHostKeyChecking=no" root@${{ vars.PRODUCTION_HOST }} "docker run -d --rm --name bomberman-app-kent-test -p 3001:3001 kentyucraq/bomberman-app:${{ github.event.pull_request.head.sha }}"
