--- a/.github/workflows/docker-ship.yml
+++ b/.github/workflows/docker-ship.yml
@@ -9,16 +9,36 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Determine Docker Hub account
+        id: set-docker-account
+        run: echo "account=${{ github.actor }}" >> "$GITHUB_OUTPUT"
+
       - name: production host is
         run: echo ${{ vars.PRODUCTION_HOST }}
+
+      - name: Set Variables Based On Account
+        env:
+          ACCOUNT: ${{ steps.set-docker-account.outputs.account }}
+        run: |
+          if [ $ACCOUNT = "kentyucra" ]; then
+            echo "DOCKER_USERNAME=${{ secrets.DOCKER_HUB_USERNAME_KENT }}" >> "$GITHUB_ENV"
+            echo "SSH_PRIVATE_KEY=${{ secrets.SSH_PRIVATE_KEY_KENT }}" >> "$GITHUB_ENV"
+            echo "PORT=3001" >> "$GITHUB_ENV"
+            echo "NAME_APP=bomberman-app-kent-test" >> "$GITHUB_ENV"
+          else
+            echo "DOCKER_USERNAME=${{ secrets.DOCKER_HUB_USERNAME_CARLOS }}" >> "$GITHUB_ENV"
+            echo "SSH_PRIVATE_KEY=${{ secrets.SSH_PRIVATE_KEY_CARLOS }}" >> "$GITHUB_ENV"
+            echo "PORT=3002" >> "$GITHUB_ENV"
+            echo "NAME_APP=bomberman-app-carlos-test" >> "$GITHUB_ENV"
+          fi
 
       - name: Set up SSH
         uses: webfactory/ssh-agent@v0.5.2
         with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY_KENT }}
+          ssh-private-key: ${{ env.SSH_PRIVATE_KEY }}
 
       - name: SSH and Deploy to Droplet
         run: |
-          ssh -o "StrictHostKeyChecking=no" root@${{ vars.PRODUCTION_HOST }} "docker pull kentyucraq/bomberman-app:${{ github.event.pull_request.head.sha }}"
-          ssh -o "StrictHostKeyChecking=no" root@${{ vars.PRODUCTION_HOST }} "(docker ps -q -f name=bomberman-app-kent-test && docker stop bomberman-app-kent-test || echo 'No running container to stop')"
-          ssh -o "StrictHostKeyChecking=no" root@${{ vars.PRODUCTION_HOST }} "docker run -d --rm --name bomberman-app-kent-test -p 3001:3001 kentyucraq/bomberman-app:${{ github.event.pull_request.head.sha }}"
+          ssh -o "StrictHostKeyChecking=no" root@${{ vars.PRODUCTION_HOST }} "docker pull $DOCKER_USERNAME/bomberman-app:${{ github.event.pull_request.head.sha }}"
+          ssh -o "StrictHostKeyChecking=no" root@${{ vars.PRODUCTION_HOST }} "(docker ps -q -f name=$NAME_APP && docker stop $NAME_APP || echo 'No running container to stop')"
+          ssh -o "StrictHostKeyChecking=no" root@${{ vars.PRODUCTION_HOST }} "docker run -d --rm --name $NAME_APP -p $PORT:$PORT $DOCKER_USERNAME/bomberman-app:${{ github.event.pull_request.head.sha }}"
