--- a/.github/workflows/docker-ship.yml
+++ b/.github/workflows/docker-ship.yml
@@ -23,18 +23,18 @@ jobs:
           if [ $ACCOUNT = "kentyucra" ]; then
             echo "DOCKER_USERNAME=${{ secrets.DOCKER_HUB_USERNAME_KENT }}" >> "$GITHUB_ENV"
             {
-              echo 'SSH_PRIVATE_KEY<<CUSTOM_DELIMITER'
+              echo 'SSH_PRIVATE_KEY<<CUSTOM_DELIMITER;'
               ${{ secrets.SSH_PRIVATE_KEY_KENT}}
-              echo 'CUSTOM_DELIMITER'  
+              echo 'CUSTOM_DELIMITER;'  
             } >> "$GITHUB_ENV"
             echo "PORT=3001" >> "$GITHUB_ENV"
             echo "NAME_APP=bomberman-app-kent-test" >> "$GITHUB_ENV"
           else
             echo "DOCKER_USERNAME=${{ secrets.DOCKER_HUB_USERNAME_CARLOS }}" >> "$GITHUB_ENV"
             {
-              echo 'SSH_PRIVATE_KEY<<CUSTOM_DELIMITER'
+              echo 'SSH_PRIVATE_KEY<<CUSTOM_DELIMITER;'
               ${{ secrets.SSH_PRIVATE_KEY_CARLOS}}
-              echo 'CUSTOM_DELIMITER'  
+              echo 'CUSTOM_DELIMITER;'  
             } >> "$GITHUB_ENV"
             echo "PORT=3002" >> "$GITHUB_ENV"
             echo "NAME_APP=bomberman-app-carlos-test" >> "$GITHUB_ENV"
