--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -53,6 +53,8 @@ jobs:
 
     - name: Build the Docker Image
       run: docker-compose -f $DOCKER_COMPOSE_FILE build
+      env:
+        PRODUCTION_HOST: ${{ vars.PRODUCTION_HOST}}
 
     - name: Tag the Docker Image
       run: docker tag $DOCKER_USERNAME/bomberman-app:1.0 $DOCKER_USERNAME/bomberman-app:${{ github.event.pull_request.head.sha }}
