--- a/package.json
+++ b/package.json
@@ -10,27 +10,40 @@
     "dev-fb": "webpack serve --config webpack.fb.js",
     "start:socket": "ts-node src/server/server.ts",
     "start": "npm run build && npm run start:socket",
-    "dev-start": "export SERVER_HOST=127.0.0.1 SERVER_PORT=3000 && npm run build && npm run start:socket"
+    "dev-start": "export SERVER_HOST=127.0.0.1 SERVER_PORT=3000 && npm run build && npm run start:socket",
+    "format": "prettier --write .",
+    "lint": "eslint --fix . --ext .ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "morgan": "^1.10.0",
     "phaser": "^3.60.0",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.21.8",
+    "@types/morgan": "^1.9.9",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
     "babel-loader": "^9.1.2",
     "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
+    "eslint": "^8.54.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-standard-with-typescript": "^40.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-n": "^16.3.1",
+    "eslint-plugin-promise": "^6.1.1",
     "html-webpack-plugin": "^5.5.1",
+    "prettier": "^3.1.0",
     "terser-webpack-plugin": "^5.3.7",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4",
+    "typescript": "^5.3.2",
     "webpack": "^5.82.0",
     "webpack-cli": "^5.0.2",
     "webpack-dev-server": "^4.13.3",
