--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "dev-fb": "webpack serve --config webpack.fb.js",
     "start:socket": "ts-node src/server/server.ts",
     "start": "npm run build && npm run start:socket",
-    "dev-start": "export SERVER_HOST=127.0.0.1 SERVER_PORT=3000 && npm run build-dev && npm run start:socket",
+    "serve:watch": "export SERVER_HOST=127.0.0.1 SERVER_PORT=3000 && nodemon src/server/server.ts",
+    "web:watch": "npm run build-dev -- --watch",
+    "dev-start": "npm-run-all --parallel serve:watch web:watch",
     "lint": "eslint 'src/**'"
   },
   "author": "",
@@ -33,6 +35,8 @@
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.55.0",
     "html-webpack-plugin": "^5.5.1",
+    "nodemon": "^3.0.2",
+    "npm-run-all": "^4.1.5",
     "terser-webpack-plugin": "^5.3.7",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
