--- a/package.json
+++ b/package.json
@@ -6,26 +6,34 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.prod.js",
+    "build-dev": "webpack --config webpack.dev.js",
     "dev": "webpack serve --config webpack.common.js",
     "dev-fb": "webpack serve --config webpack.fb.js",
     "start:socket": "ts-node src/server/server.ts",
     "start": "npm run build && npm run start:socket",
-    "dev-start": "export SERVER_HOST=127.0.0.1 SERVER_PORT=3000 && npm run build && npm run start:socket"
+    "serve:watch": "nodemon src/server/server.ts",
+    "web:watch": "npm run build-dev -- --watch",
+    "dev-start": " export SERVER_HOST=127.0.0.1 SERVER_PORT=3000 && npm-run-all --parallel serve:watch web:watch",
+    "lint": "eslint 'src/**'"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
     "phaser": "^3.60.0",
+    "pino": "^8.16.2",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.21.8",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
     "babel-loader": "^9.1.2",
     "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
+    "eslint": "^8.55.0",
     "html-webpack-plugin": "^5.5.1",
     "terser-webpack-plugin": "^5.3.7",
     "ts-loader": "^9.4.2",
