--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.55.0",
     "html-webpack-plugin": "^5.5.1",
+    "nodemon": "^3.0.2",
     "terser-webpack-plugin": "^5.3.7",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
