--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint": "^8.55.0",
     "html-webpack-plugin": "^5.5.1",
     "nodemon": "^3.0.2",
+    "npm-run-all": "^4.1.5",
     "terser-webpack-plugin": "^5.3.7",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
